--- a/plugin.xml
+++ b/plugin.xml
@@ -67,12 +67,14 @@
             </feature>
         </config-file>
 
-        <framework src="com.android.support:support-v4:23.2.1" />
+        <framework src="com.android.support:support-v4:27.+" />
         <framework src="com.google.code.gson:gson:2.3" />
         <framework src="commons-io:commons-io:2.4" />
+        <preference name="ANDROIDX_CORE_VERSION" default="1.6.+"/>
+        <framework src="androidx.core:core:$ANDROIDX_CORE_VERSION" />
 
-        <resource-file src="src/android/ApiAiPlugin.java" target-dir="src/ai/api" />
-        <resource-file src="libs/ailib.jar" target-dir="libs" />
+        <source-file src="src/android/ApiAiPlugin.java" target-dir="src/ai/api" />
+        <source-file src="libs/ailib.jar" target-dir="libs" />
     </platform>
 
 </plugin>
